# Fernandez-LLMWatermarking

./: .gitignore  README.md  pyproject.toml
src/fernandez_llmwatermarking/: __init__.py  detector.py  generator.py  hashing.py  main.py
static/data/: data%2Fprompts.json
