[project]
name = "fernandez-llmwatermarking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeanne", email = "jeanne.gautier@datacraft.paris" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[project.scripts]
fernandez-llmwatermarking = "fernandez_llmwatermarking:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
